--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
 
         .pic{
-            background-image: url('./female-donkey-cartoon.jpg');
+            background-image: url('./mypic.jpeg');
             width: 30vw;
             height: 40vh;
             background-size: contain;
