--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentist Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./female-donkey-cartoon.jpg">
+    <link rel="icon" type="image/x-icon" href="./tooth.jpg">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
         @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Ubuntu:wght@300&display=swap');
