--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dentist Portfolio</title>
+    <title>ICMR Research Survey</title>
     <link rel="icon" type="image/x-icon" href="./tooth.jpg">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
